feat: add links to buttons

--- a/work_phase_4/home_page.html
+++ b/work_phase_4/home_page.html
@@ -43,8 +43,8 @@
                         and
                         cultural food stories from every corner of Australia. Your heritage deserves to be shared.</p>
                     <div class="hero-actions">
-                        <a href="#join" class="button button-primary">Join us</a>
-                        <a href="#about" class="button button-secondary">Learn More</a>
+                        <a href="#highlight" class="button button-primary">Explore</a>
+                        <a href="./about.html" class="button button-secondary">Learn More</a>
                     </div>
                 </div>
                 <div class="hero-image">
@@ -56,7 +56,7 @@
 
         <div class="container mt-16">
             <!-- Highlight Section -->
-            <section class="highlights" aria-labelledby="highlights-title">
+            <section class="highlights" aria-labelledby="highlights-title" id="highlight">
                 <header class="highlights-header">
                     <span class="highlights-eyebrow">Discover Our Features</span>
                     <h2 id="highlights-title" class="highlights-title">Share, Compete, and Explore</h2>
@@ -75,7 +75,7 @@
                             <p class="card-description">Share your culinary stories, traditional recipes, and food
                                 experiences with our community. Connect through posts, photos, and meaningful
                                 conversations about cultural cuisine.</p>
-                            <a href="#feedcrumbs" class="card-link">Explore Timeline</a>
+                            <button class="card-link">View Recipes</button>
                         </div>
                     </article>
 
@@ -131,6 +131,9 @@
                                 Numquam rerum ea sequi sed, nemo et amet sit laborum voluptates velit officia mollitia
                                 tempore incidunt vitae veritatis, quas nam eveniet iusto temporibus accusantium ex
                                 labore cum. Voluptates esse doloremque animi itaque.</p>
+                            <a href="about.html">
+                                <button class="button button-primary btn-learn-more">Learn More</button>
+                            </a>
                         </div>
                     </article>
 
@@ -146,6 +149,9 @@
                                 atque commodi ullam ipsum, minus dignissimos nostrum eos iure, beatae nobis aliquid
                                 voluptatem. Asperiores consequatur cumque consequuntur. Recusandae, voluptas ipsa.
                                 Commodi vitae corporis velit iure sunt quaerat similique alias adipisci officia.</p>
+                            <a href="about.html">
+                                <button class="button button-primary btn-learn-more">Learn More</button>
+                            </a>
                         </div>
                     </article>
                 </div>
