--- a/work_phase_4/home_page.html
+++ b/work_phase_4/home_page.html
@@ -277,7 +277,7 @@
         </div>
     </footer>
     </main>
-    <script type="module" src="js/home_page.js"></script>
+    <script type="module" src="js/modules/newslettter-plugin.js"></script>
 </body>
 
 </html>
