--- a/work_phase_4/crumbings.html
+++ b/work_phase_4/crumbings.html
@@ -366,7 +366,69 @@
                 </div>
             </div>
         </footer>
+        <!-- Modal Create Crumbings Recipe -->
+        <div id="create-crumbings-modal" class="modal" role="dialog" aria-labelledby="modal-title" aria-modal="true"
+            hidden>
+            <div class="modal-overlay" aria-hidden="true"></div>
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h2 id="modal-title">Create New Recipe</h2>
+                    <button type="button" class="modal-close" aria-label="Close modal">
+                        <span aria-hidden="true">×</span>
+                    </button>
+                </div>
+
+                <form id="crumbings-form" class="crumb-form" novalidate>
+                    <div class="form-group">
+                        <label for="recipe-creator" class="form-label">
+                            Recipe Creator <span class="required" aria-label="required">*</span>
+                        </label>
+                        <input type="text" id="recipe-creator" name="creator" class="form-input" required
+                            aria-required="true" aria-describedby="recipe-creator-error" placeholder="Your name">
+                        <p id="recipe-creator-error" class="error-message" role="alert" aria-live="polite"></p>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="recipe-description" class="form-label">
+                            Recipe Description <span class="required" aria-label="required">*</span>
+                        </label>
+                        <textarea id="recipe-description" name="description" class="form-input form-textarea" rows="4"
+                            required aria-required="true" aria-describedby="recipe-description-error"
+                            placeholder="Share the story and instructions for your traditional recipe..."></textarea>
+                        <p id="recipe-description-error" class="error-message" role="alert" aria-live="polite"></p>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="recipe-photo" class="form-label">
+                            Recipe Photo <span class="required" aria-label="required">*</span>
+                        </label>
+                        <div class="file-input-wrapper">
+                            <input type="file" id="recipe-photo" name="photo" class="form-input-file" accept="image/*"
+                                required aria-required="true" aria-describedby="recipe-photo-error photo-help">
+                            <label for="recipe-photo" class="file-input-label">
+                                <span class="file-input-text">Choose a file</span>
+                                <span class="file-input-button">Browse</span>
+                            </label>
+                            <p id="photo-preview" class="file-name"></p>
+                        </div>
+                        <p id="photo-help" class="form-help">Max file size: 10MB. Supported formats: JPG, PNG, GIF</p>
+                        <p id="recipe-photo-error" class="error-message" role="alert" aria-live="polite"></p>
+                    </div>
+
+                    <div id="form-feedback" class="form-feedback" role="status" aria-live="polite" aria-atomic="true">
+                    </div>
+
+                    <div class="form-actions">
+                        <button type="button" class="button button-secondary" id="cancel-btn">Cancel</button>
+                        <button type="submit" class="button button-primary">Create Recipe</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+
     </main>
+    <script type="module" src="js/crumbings.js"></script>
+
 </body>
 
 </html>
