fix: change home page to index.html

--- a/work_phase_4/community.html
+++ b/work_phase_4/community.html
@@ -16,7 +16,7 @@
 <body>
     <nav id="nav-mobile" aria-label="Mobile Navigation">
         <ul>
-            <li><a href="home_page.html"><span class="icon">🏚️</span></a></li>
+            <li><a href="index.html"><span class="icon">🏚️</span></a></li>
             <li><a href="feed_crumbs.html"><span class="icon">🗺️</span></a></li>
             <li><a href="crumbs_map.html"><span>🗺️</span></a></li>
             <li><a href="crumbings.html"><span>👥</span></a></li>
@@ -25,7 +25,7 @@
     </nav>
     <nav id="nav-dekstop" aria-label="Desktop Navigation">
         <ul>
-            <li><a href="home_page.html"><span class="icon">Home</span></a></li>
+            <li><a href="index.html"><span class="icon">Home</span></a></li>
             <li><a href="feed_crumbs.html"><span class="icon">FeedCrumbs</span></a></li>
             <li><a href="crumbs_map.html"><span>CrumbsMap</span></a></li>
             <li><a href="crumbings.html"><span>Crumbings</span></a></li>
@@ -279,7 +279,7 @@
                         <div class="footer-links">
                             <h4 class="footer-heading">Explore</h4>
                             <ul>
-                                <li><a href="home_page.html">Home</a></li>
+                                <li><a href="index.html">Home</a></li>
                                 <li><a href="about.html">About</a></li>
                                 <li><a href="feedcrumbs.html">FeedCrumbs</a></li>
                                 <li><a href="community.html">OZvent</a></li>
