--- a/work_phase_4/crumbs_map.html
+++ b/work_phase_4/crumbs_map.html
@@ -19,7 +19,7 @@
     </button>
     <nav id="nav-mobile" aria-label="Mobile Navigation">
         <ul>
-            <li><a href="home_page.html"><span>🏚️</span></a></li>
+            <li><a href="index.html"><span>🏚️</span></a></li>
             <li><a href="feed_crumbs.html"><span>🗺️</span></a></li>
             <li><a href="crumbs_map.html" aria-current="page"><span>🗺️</span></a></li>
             <li><a href="crumbings.html"><span>👥</span></a></li>
@@ -28,7 +28,7 @@
     </nav>
     <nav id="nav-dekstop" aria-label="Desktop Navigation">
         <ul>
-            <li><a href="home_page.html"><span>Home</span></a></li>
+            <li><a href="index.html"><span>Home</span></a></li>
             <li><a href="feed_crumbs.html"><span>FeedCrumbs</span></a></li>
             <li><a href="crumbs_map.html" aria-current="page"><span>CrumbsMap</span></a></li>
             <li><a href="crumbings.html"><span>Crumbings</span></a></li>
