--- a/work_phase_4/genai_mt_acknowledgement.html
+++ b/work_phase_4/genai_mt_acknowledgement.html
@@ -16,7 +16,7 @@
 <body>
     <nav id="nav-mobile" aria-label="Mobile Navigation">
         <ul>
-            <li><a href="home_page.html"><span>🏚️</span></a></li>
+            <li><a href="index.html"><span>🏚️</span></a></li>
             <li><a href="feed_crumbs.html" aria-current="page"><span>🗺️</span></a></li>
             <li><a href="crumbs_map.html"><span>🗺️</span></a></li>
             <li><a href="crumbings.html"><span>👥</span></a></li>
@@ -25,7 +25,7 @@
     </nav>
     <nav id="nav-dekstop" aria-label="Desktop Navigation">
         <ul>
-            <li><a href="home_page.html"><span>Home</span></a></li>
+            <li><a href="index.html"><span>Home</span></a></li>
             <li><a href="feed_crumbs.html" aria-current="page"><span>FeedCrumbs</span></a></li>
             <li><a href="crumbs_map.html"><span>CrumbsMap</span></a></li>
             <li><a href="crumbings.html"><span>Crumbings</span></a></li>
