feat: html structure implementation rationale

--- a/work_phase_4/genai_mt_acknowledgement.html
+++ b/work_phase_4/genai_mt_acknowledgement.html
@@ -17,7 +17,7 @@
     <nav id="nav-mobile" aria-label="Mobile Navigation">
         <ul>
             <li><a href="index.html"><span>🏚️</span></a></li>
-            <li><a href="feed_crumbs.html" aria-current="page"><span>🗺️</span></a></li>
+            <li><a href="feed_crumbs.html"><span>🗺️</span></a></li>
             <li><a href="crumbs_map.html"><span>🗺️</span></a></li>
             <li><a href="crumbings.html"><span>👥</span></a></li>
             <li><a href="community.html"><span>👥</span></a></li>
@@ -26,7 +26,7 @@
     <nav id="nav-dekstop" aria-label="Desktop Navigation">
         <ul>
             <li><a href="index.html"><span>Home</span></a></li>
-            <li><a href="feed_crumbs.html" aria-current="page"><span>FeedCrumbs</span></a></li>
+            <li><a href="feed_crumbs.html"><span>FeedCrumbs</span></a></li>
             <li><a href="crumbs_map.html"><span>CrumbsMap</span></a></li>
             <li><a href="crumbings.html"><span>Crumbings</span></a></li>
             <li><a href="community.html"><span>OZvent</span></a></li>
