--- a/work_phase_4/implementation_rationale.html
+++ b/work_phase_4/implementation_rationale.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="css/base.css" />
     <link rel="stylesheet" href="css/layout.css" />
     <link rel="stylesheet" href="css/components.css" />
-    <link rel="stylesheet" href="css/modal.css" />
     <link rel="stylesheet" href="css/page_css/implementation_rationale.css" />
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
 </head>
@@ -18,7 +17,7 @@
     <nav id="nav-mobile" aria-label="Mobile Navigation">
         <ul>
             <li><a href="index.html"><span>🏚️</span></a></li>
-            <li><a href="feed_crumbs.html" aria-current="page"><span>🗺️</span></a></li>
+            <li><a href="feed_crumbs.html"><span>🗺️</span></a></li>
             <li><a href="crumbs_map.html"><span>🗺️</span></a></li>
             <li><a href="crumbings.html"><span>👥</span></a></li>
             <li><a href="community.html"><span>👥</span></a></li>
@@ -27,7 +26,7 @@
     <nav id="nav-dekstop" aria-label="Desktop Navigation">
         <ul>
             <li><a href="index.html"><span>Home</span></a></li>
-            <li><a href="feed_crumbs.html" aria-current="page"><span>FeedCrumbs</span></a></li>
+            <li><a href="feed_crumbs.html"><span>FeedCrumbs</span></a></li>
             <li><a href="crumbs_map.html"><span>CrumbsMap</span></a></li>
             <li><a href="crumbings.html"><span>Crumbings</span></a></li>
             <li><a href="community.html"><span>OZvent</span></a></li>
@@ -38,45 +37,33 @@
         <div class="container">
             <section>
                 <h1 class="title">Implementation Rationale</h1>
-                <p class="py-4">
-                    Below is my ethical response to the client regarding the implementation of a newsletter
-                    subscription plugin on the FeedCrumb Project. This response addresses the ethical considerations and
-                    implications of using such a plugin, including user privacy, data security, and compliance with
-                    relevant regulations.
-                </p>
             </section>
 
             <section class="mt-6">
-                <h3>Introduction</h3>
-                <p class=" py-4">
-                    First off, I want to acknowledge that I feel honored and eager to work with Connected Communities
-                    Initiative, especially considering the noble nature of the project's goal. The newsletter
-                    subscription feature you have written in the client brief present a big oppportunity to get to know
-                    the community members, and surely will be useful to engage with the actual communities later down
-                    the road. However, In addition to support your goal and mission, as the design team we have a
-                    responsibility to ensure that the features we will implement always aligns with care, to protect
-                    the communities and the people that use it. In order to accomplish this, we have created some
-                    analysis in order to answer your request, including considering the professional standards. Below,
-                    I have structured 3 sections, including our ethical analysis, our reccommendation, and explanation
-                    on how our reccommendation will benefits not only the users, but you as the client.
+                <h3 class="pb-2">Thanks!</h3>
+                <p>
+                    First off I just want to mention that I really enjoyed working this assignment 4. It was a really
+                    it was a challanging yet fun experience to build a website end to end, from gathering the values,
+                    needs, planning the features, learning to design ethical and accessible the UX/UI, and finally
+                    implementing the website. Hats off to the teaching team for creating such an engaging and educative
+                    course!
                 </p>
             </section>
 
             <section class="accordion my-5 pb-8">
                 <div class="accordion-item open">
-                    <button class="accordion-header">▷ Ethical Analysis</button>
+                    <button class="accordion-header">▷ Implementation Rationale</button>
                     <div class="accordion-content">
-                        <p class="p-b-3">
-                            After some careful considerations of your newsletter plugin, we have point out several
-                            significant ethical concerns that we have to pay attention to. These concerns rooted from
-                            the principles in the ACS Code of Professional Ethics, especially regarding the Value of
-                            Trustworthiness, Honesty, and Respect.
+                        <p class="pb-3">
+                            Below is my rationale regarding the implementation rationale and justification for the
+                            design and
+                            features that I have made in this assignment.
 
                         </p>
 
                         <div class="accordion nested pb-4">
                             <div class="accordion-item">
-                                <button class="accordion-header">▷ Privacy and Data Minimization Concerns</button>
+                                <button class="accordion-header">▷ Alignment with Client and User Needs </button>
                                 <div class="accordion-content">
                                     <p>
                                         From the client brief, the plugin includes several personal data that was not
@@ -94,7 +81,7 @@
                                 </div>
                             </div>
                             <div class="accordion-item pt-4">
-                                <button class="accordion-header">▷ Consensual Issue</button>
+                                <button class="accordion-header">▷ Accessibility and Ethical Considerations</button>
                                 <div class="accordion-content">
                                     The client brief noted that the informations gathered from the form will help
                                     understand the users for future planning. After careful look, this argument has not
@@ -110,7 +97,7 @@
                             </div>
 
                             <div class="accordion-item pt-4">
-                                <button class="accordion-header">▷ Discrimination Potential</button>
+                                <button class="accordion-header">▷ Variations from A3 Design Proposal</button>
                                 <div class="accordion-content">
                                     Some of the used personal data in the plugin, such as sexuality, gender, and annual
                                     income could be a major vulnerability for the community members. Given that your
@@ -122,67 +109,46 @@
                                     personal data of the users.
                                 </div>
                             </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
 
-            <section class="accordion my-5 pb-8">
-                <div class="accordion-item open">
-                    <button class="accordion-header">▷ Reccommendation</button>
-                    <div class="accordion-content">
-                        <p class="pb-3">
-                            To address the ethical concerns that I have mentioned above, while also still meeting your
-                            organization goals and funder requirements, I will list some concrete reccommendation steps
-                            that propose balanced solution that protect our potential users and also maintaining the
-                            plugin purpose.
-                        </p>
-
-                        <div class="accordion nested pb-4">
-                            <div class="accordion-item">
-                                <button class="accordion-header">▷ Data Minimization</button>
+                            <div class="accordion-item pt-4">
+                                <button class="accordion-header">▷ Challenges and Strategies</button>
                                 <div class="accordion-content">
-                                    <p>
-                                        We can work together to compromise with the funder to limit the scope of data
-                                        collection by only use the necessary and appropiate data. My proposal for the
-                                        data collected is Name (with an option to use preferred name), email address,
-                                        and community interest.
-
-                                        This will enable our newsletter plugin to still give us meaningul information
-                                        into the potential users, and minimizing the potential risks. By using this, we
-                                        still can keep the newsletter subscription feature by sending emails to the
-                                        users, and also
-                                        gaining the core information that we need, which is name and the preferred
-                                        community. For additional information, we in the future can use the publicly and
-                                        consentually created informations by the users, such as public interactions,
-                                        events created, activity patterns, that could also be inferred after the service
-                                        has been generally used. By using a public and consensual data from the user, we
-                                        can have even more greater insight due to the volume, and also the genuine
-                                        activities by the users.
-                                    </p>
+                                    Some of the used personal data in the plugin, such as sexuality, gender, and annual
+                                    income could be a major vulnerability for the community members. Given that your
+                                    organization will serve multiple diverse communities, and some of them which may
+                                    have a systemic disadvantage, collecting this kind of data might pose a big threat
+                                    for them if those data somehow leaked inside or outside of the website that we want
+                                    to create. As the ACS principle of respect mentioned, respect for others is an
+                                    essential principle and we have to minimize any harm to stakeholders, including the
+                                    personal data of the users.
                                 </div>
                             </div>
 
                             <div class="accordion-item pt-4">
-                                <button class="accordion-header">▷ Improved Transparency and Consent</button>
+                                <button class="accordion-header">▷ Accessibility Audit</button>
                                 <div class="accordion-content">
-                                    In order to maintain transparency and consent, we can propose to your funder to use
-                                    alternative methods to gain insights. Other than one of the solution that I have
-                                    mentioned
-                                    above by using the user activities data, we can also conduct a periodic demographic
-                                    surveys
-                                    with cear research ethics methods and consent forms. By doing this, not only we can
-                                    have a quantitative data, we can also gain a deeper understanding by doing
-                                    qualitiatve data gathering activites, for example doing interviews to the community
-                                    representatives within the comunity.
+                                    Some of the used personal data in the plugin, such as sexuality, gender, and annual
+                                    income could be a major vulnerability for the community members. Given that your
+                                    organization will serve multiple diverse communities, and some of them which may
+                                    have a systemic disadvantage, collecting this kind of data might pose a big threat
+                                    for them if those data somehow leaked inside or outside of the website that we want
+                                    to create. As the ACS principle of respect mentioned, respect for others is an
+                                    essential principle and we have to minimize any harm to stakeholders, including the
+                                    personal data of the users.
+                                </div>
+                            </div>
 
-                                    <br>
-                                    <br>
-
-                                    Furtheremore, by doing a periodic demographic surveys or interviews, we can tailor
-                                    the questions asked to be more spesific, and based on the actual needs of you and
-                                    the funder. So not only you will have more data, you will also have better quality
-                                    of the data since we are simply asking the right questions to the users.
+                            <div class="accordion-item pt-4">
+                                <button class="accordion-header">▷ GitHub Repository</button>
+                                <div class="accordion-content">
+                                    Some of the used personal data in the plugin, such as sexuality, gender, and annual
+                                    income could be a major vulnerability for the community members. Given that your
+                                    organization will serve multiple diverse communities, and some of them which may
+                                    have a systemic disadvantage, collecting this kind of data might pose a big threat
+                                    for them if those data somehow leaked inside or outside of the website that we want
+                                    to create. As the ACS principle of respect mentioned, respect for others is an
+                                    essential principle and we have to minimize any harm to stakeholders, including the
+                                    personal data of the users.
                                 </div>
                             </div>
                         </div>
