--- a/work_phase_4/index.html
+++ b/work_phase_4/index.html
@@ -73,7 +73,9 @@
                         <p class="card-description">Share your culinary stories, traditional recipes, and food
                             experiences with our community. Connect through posts, photos, and meaningful
                             conversations about cultural cuisine.</p>
-                        <button class="card-link">View Recipes</button>
+                        <a href="./feed_crumbs.html">
+                            <button class="card-link">Visit FeedCrumbs</button>
+                        </a>
                     </div>
                 </article>
 
@@ -87,7 +89,9 @@
                         <p class="card-description">Join exciting cooking competitions that celebrate traditional
                             and cultural cuisines. Showcase your skills, learn from others, and earn recognition for
                             your heritage dishes.</p>
-                        <a href="#crumbings" class="card-link">View Competitions</a>
+                        <a href="./crumbings.html">
+                            <button class="card-link">Make your own recipe</button>
+                        </a>
                     </div>
                 </article>
 
@@ -101,7 +105,9 @@
                         <p class="card-description">Discover cultural food experiences near you. Explore geolocated
                             posts, find authentic restaurants, and connect with local culinary traditions across
                             Australia.</p>
-                        <a href="#crumbsmap" class="card-link">Explore Map</a>
+                        <a href="./crumbs_map.html">
+                            <button class="card-link">Explore Crumbs</button>
+                        </a>
                     </div>
                 </article>
             </div>
@@ -146,7 +152,7 @@
                             atque commodi ullam ipsum, minus dignissimos nostrum eos iure, beatae nobis aliquid
                             voluptatem. Asperiores consequatur cumque consequuntur. Recusandae, voluptas ipsa.
                             Commodi vitae corporis velit iure sunt quaerat similique alias adipisci officia.</p>
-                        <a href="about.html">
+                        <a href="about.html#implementation-title">
                             <button class="button button-primary btn-learn-more">Learn More</button>
                         </a>
                     </div>
